--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@capacitor/app": "7.1.0",
-    "@capacitor/core": "7.4.3",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/geolocation": "^7.1.5",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "firebase": "^11.10.0",
     "ionicons": "^7.4.0",
+    "mapbox-gl": "^3.16.0",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
     "tslib": "^2.3.0",
@@ -45,9 +48,12 @@
     "@angular/cli": "20.3.6",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/language-service": "^20.0.0",
-    "@capacitor/cli": "7.4.3",
+    "@capacitor/cli": "^7.4.4",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/mapbox-gl": "^3.4.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
