Mejora de Pagiona pedidos y componente detalle pedido, actualizacion de busqueda por gps para Android/iOs y actualizacion de clientroute

--- a/angular.json
+++ b/angular.json
@@ -43,14 +43,14 @@
             "production": {
               "budgets": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "type": "bundle",
+                  "maximumWarning": "4kb",
+                  "maximumError": "5kb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "4kb",
+                  "maximumError": "6kb"
                 }
               ],
               "fileReplacements": [
