--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^11.10.0",
     "ionicons": "^7.4.0",
     "mapbox-gl": "^3.16.0",
+    "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
     "tslib": "^2.3.0",
